added first card to second section

--- a/index.html
+++ b/index.html
@@ -28,6 +28,17 @@
                 <img src="./images/illustration-mockups.svg" alt="mockup">
             </div>
         </section>
+        <section>
+            <div>
+                <div>
+                    <h2>Grow Together</h2>
+                    <p>Generate meaningful discussions with your audience and build strong, loyal community. Think of insightful conversations you miss out on with feedback form.</p>
+                </div>
+                <div>
+                    <img src="./images/illustration-grow-together.svg" alt="grow Together illustration">
+                </div>
+            </div>
+        </section>
     </main>
 
 </body>
