added second card to second section

--- a/index.html
+++ b/index.html
@@ -38,6 +38,15 @@
                     <img src="./images/illustration-grow-together.svg" alt="grow Together illustration">
                 </div>
             </div>
+            <div>
+                <div>
+                    <img src="./images/illustration-flowing-conversation.svg" alt="flowing conversation illustration">
+                </div>
+                <div>
+                    <h2>Flowing Conversations</h2>
+                    <p>You wouldn't paginate a conversation in real life, so while do it online? Our threads have just-in-time loading for a more natural flow.</p>
+                </div>
+            </div>
         </section>
     </main>
 
