added third card to second section

--- a/index.html
+++ b/index.html
@@ -47,6 +47,15 @@
                     <p>You wouldn't paginate a conversation in real life, so while do it online? Our threads have just-in-time loading for a more natural flow.</p>
                 </div>
             </div>
+            <div>
+                <div>
+                    <h2>Your User</h2>
+                    <p>It take no time at all to integrate Huddle with apps authentication solution. This means, once signed in to your app, your user can start chatting immediately.</p>
+                </div>
+                <div>
+                    <img src="./images/illustration-your-users.svg" alt="your user illustration">
+                </div>
+            </div>
         </section>
     </main>
 
