--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
                 </div>
             </div>
         </section>
+        <section>
+            <h2>Ready To Build Your Community?</h2>
+            <button>Get Started For Free</button>
+        </section>
     </main>
 
 </body>
