added footer elements

--- a/index.html
+++ b/index.html
@@ -62,6 +62,40 @@
             <button>Get Started For Free</button>
         </section>
     </main>
+    <footer>
+        <div>
+            <img src="./images/logo.svg" alt="logo">
+        </div>
+        <div>
+            <div>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores aliquam omnis rem quas animi, maxime deleniti! Vel velit quod, eligendi voluptatibus laborum error unde sint, quidem laudantium consequatur delectus in.</p>
+            </div>
+            <div>
+                <p>+340-322-32</p>
+            </div>
+            <p>example.huddle.com</p>
+        </div>
+        <div>
+            <div>
+                <ul>
+                    <li><a href="">About Us</a></li>
+                    <li><a href="">What We Do</a></li>
+                    <li><a href="">FAQ</a></li>
+                </ul>
+            </div>
+            <div>
+                <ul>
+                    <li><a href="">Career</a></li>
+                    <li><a href="">Blog</a></li>
+                    <li><a href="">Contact Us</a></li>
+                </ul>
+            </div>
+
+        </div>
+        <div>
+            <p>&copy; Copyright 2018 Huddle. All rights reserved.</p>
+        </div>
+    </footer>
 
 </body>
 
