--- a/index.html
+++ b/index.html
@@ -19,12 +19,14 @@
         </div>
     </header>
     <main>
-        <section>
+        <!-- first section  -->
+        <section id="hero-section">
             <div>
                 <h1>Build The Community Your Fan Will Love.</h1>
                 <p>Huddle re-images the way we build community. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.</p>
                 <button>Get Started For Free</button>
             </div>
+
             <div>
                 <img src="./images/illustration-mockups.svg" alt="mockup">
             </div>
