make first section elements to go beside each other

--- a/index.html
+++ b/index.html
@@ -21,15 +21,17 @@
     <main>
         <!-- first section  -->
         <section id="hero-section">
-            <div>
-                <h1>Build The Community Your Fan Will Love.</h1>
+            <div id="hero-section-text">
+                <h1>Build The Community <br> Your Fan Will Love.</h1>
                 <p>Huddle re-images the way we build community. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.</p>
                 <button>Get Started For Free</button>
             </div>
 
-            <div>
+
+            <!-- <div id="hero-section-image">
                 <img src="./images/illustration-mockups.svg" alt="mockup">
-            </div>
+            </div> -->
+            <img id="hero-section-image" src="./images/illustration-mockups.svg" alt="mockup">
         </section>
         <section>
             <div>
