display image beside text for each card

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Huddle</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 
@@ -21,9 +22,9 @@
     <main>
         <!-- first section  -->
         <section id="hero-section">
-            <div id="hero-section-text">
+            <div id="hero-section-textbox">
                 <h1>Build The Community <br> Your Fan Will Love.</h1>
-                <p>Huddle re-images the way we build community. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.</p>
+                <p>Huddle re-images the way we build community. You have <br> a voice, but so does your audience. Create connections with your <br> users as you engage in genuine discussion.</p>
                 <button>Get Started For Free</button>
             </div>
 
@@ -33,33 +34,39 @@
             </div> -->
             <img id="hero-section-image" src="./images/illustration-mockups.svg" alt="mockup">
         </section>
-        <section>
-            <div>
+        <section id="card-section">
+            <div class="odd">
                 <div>
                     <h2>Grow Together</h2>
                     <p>Generate meaningful discussions with your audience and build strong, loyal community. Think of insightful conversations you miss out on with feedback form.</p>
                 </div>
-                <div>
+                <!-- <div>
                     <img src="./images/illustration-grow-together.svg" alt="grow Together illustration">
-                </div>
+                </div> -->
+                <img src="./images/illustration-grow-together.svg" alt="grow Together illustration">
+
             </div>
-            <div>
-                <div>
+            <div class="even">
+                <!-- <div>
                     <img src="./images/illustration-flowing-conversation.svg" alt="flowing conversation illustration">
-                </div>
+                </div> -->
+                <img src="./images/illustration-flowing-conversation.svg" alt="flowing conversation illustration">
+
                 <div>
                     <h2>Flowing Conversations</h2>
                     <p>You wouldn't paginate a conversation in real life, so while do it online? Our threads have just-in-time loading for a more natural flow.</p>
                 </div>
             </div>
-            <div>
+            <div class="odd">
                 <div>
                     <h2>Your User</h2>
                     <p>It take no time at all to integrate Huddle with apps authentication solution. This means, once signed in to your app, your user can start chatting immediately.</p>
                 </div>
-                <div>
+                <!-- <div>
                     <img src="./images/illustration-your-users.svg" alt="your user illustration">
-                </div>
+                </div> -->
+                <img src="./images/illustration-your-users.svg" alt="your user illustration">
+
             </div>
         </section>
         <section>
