display footer element beside one another

--- a/index.html
+++ b/index.html
@@ -75,36 +75,33 @@
         </section>
     </main>
     <footer>
-        <div>
-            <img src="./images/logo.svg" alt="logo">
-        </div>
-        <div>
+        <img src="./images/logo-white.svg" alt="logo">
+
+        <div class="footer-container">
             <div>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores aliquam omnis rem quas animi, maxime deleniti! Vel velit quod, eligendi voluptatibus laborum error unde sint, quidem laudantium consequatur delectus in.</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores aliquam omnis rem quas animi</p>
             </div>
             <div>
                 <p>+340-322-32</p>
             </div>
             <p>example.huddle.com</p>
         </div>
-        <div>
-            <div>
-                <ul>
-                    <li><a href="">About Us</a></li>
-                    <li><a href="">What We Do</a></li>
-                    <li><a href="">FAQ</a></li>
-                </ul>
-            </div>
-            <div>
-                <ul>
-                    <li><a href="">Career</a></li>
-                    <li><a href="">Blog</a></li>
-                    <li><a href="">Contact Us</a></li>
-                </ul>
-            </div>
+        <div class="footer-container">
+
+            <ul class="quick-links">
+                <li><a href="">About Us</a></li>
+                <li><a href="">What We Do</a></li>
+                <li><a href="">FAQ</a></li>
+            </ul>
+
+            <ul class="quick-links">
+                <li><a href="">Career</a></li>
+                <li><a href="">Blog</a></li>
+                <li><a href="">Contact Us</a></li>
+            </ul>
 
         </div>
-        <div>
+        <div class="footer-container">
             <p>&copy; Copyright 2018 Huddle. All rights reserved.</p>
         </div>
     </footer>
