style CTA container

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
             </div>
         </section>
-        <section>
+        <section id="cta-card">
             <h2>Ready To Build Your Community?</h2>
             <button>Get Started For Free</button>
         </section>
